fixed bottom section

--- a/404.markdown
+++ b/404.markdown
@@ -12,11 +12,8 @@
 
 ---
 
-B. Firat OZDEMIR - Software Engineer
+| ----------------------------------- | ------------------------------------------------------ | ----------------------------------------- |
+| [E-mail](b.firat.ozdemir@gmail.com) | [Linkedin](https://www.linkedin.com/in/bfiratozdemir/) | [Github](https://github.com/JackCampbell) |
 
-* [E-mail](b.firat.ozdemir@gmail.com)
-* [Linkedin](https://www.linkedin.com/in/bfiratozdemir/)
-* [Github](https://github.com/JackCampbell)
 
----
 > © 2021. B. Firat OZDEMIR. All rights reserved.
