--- a/404.markdown
+++ b/404.markdown
@@ -12,8 +12,8 @@
 
 ---
 
-| ---------------------------------------- | ------------------------------------------------------ | ----------------------------------------- |
-| [E-mail](mail:b.firat.ozdemir@gmail.com) | [Linkedin](https://www.linkedin.com/in/bfiratozdemir/) | [Github](https://github.com/JackCampbell) |
+| ------------------------------------------ | ------------------------------------------------------ | ----------------------------------------- |
+| [E-mail](mailto:b.firat.ozdemir@gmail.com) | [Linkedin](https://www.linkedin.com/in/bfiratozdemir/) | [Github](https://github.com/JackCampbell) |
 
 
 > © 2021. B. Firat OZDEMIR. All rights reserved.
